--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@daily-co/daily-js": "0.29.0",
+    "@faker-js/faker": "7.4.0",
     "@supabase/auth-helpers-nextjs": "0.2.7",
     "@supabase/auth-helpers-react": "0.2.3",
     "@supabase/supabase-js": "2.0.0-rc.1",
@@ -37,7 +38,8 @@
     "postcss": "8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.1.8"
+    "tailwindcss": "3.1.8",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@commitlint/cli": "17.0.3",
@@ -45,6 +47,7 @@
     "@types/node": "16.11.47",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.32.0",
     "@typescript-eslint/parser": "5.32.0",
     "eslint": "8.21.0",
