feat: add GET /ship api and basic ship page

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ DAILY_REST_DOMAIN=https://api.daily.co/v1
 NEXT_PUBLIC_SUPABASE_URL=https://ehe.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=anon
 SUPABASE_SERVICE_ROLE_KEY=secret
+API_BASE_URL=http://localhost:3000
