--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.1.8",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "validator": "13.7.0"
   },
   "devDependencies": {
     "@commitlint/cli": "17.0.3",
@@ -48,6 +49,7 @@
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/uuid": "8.3.4",
+    "@types/validator": "13.7.5",
     "@typescript-eslint/eslint-plugin": "5.32.0",
     "@typescript-eslint/parser": "5.32.0",
     "eslint": "8.21.0",
