--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@faker-js/faker": "7.4.0",
     "@supabase/auth-helpers-nextjs": "0.2.7",
     "@supabase/auth-helpers-react": "0.2.3",
-    "@supabase/supabase-js": "2.0.0-rc.1",
+    "@supabase/supabase-js": "1.35.6",
     "autoprefixer": "10.4.8",
     "flowbite": "1.5.2",
     "flowbite-react": "0.1.6",
