--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@supabase/auth-helpers-react": "0.2.3",
     "@supabase/supabase-js": "1.35.6",
     "autoprefixer": "10.4.8",
+    "avvvatars-react": "0.4.2",
     "flowbite": "1.5.2",
     "flowbite-react": "0.1.6",
     "next": "12.2.3",
