--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-import-resolver-typescript": "3.4.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-tailwindcss": "3.6.0",
     "husky": "8.0.1",
     "lint-staged": "13.0.3",
     "prettier": "2.7.1",
